app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
 * vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_tree .
 *= require_self
 */

// @import "bootstrap-sprockets";
// @import "bootstrap";

*{
    margin: auto;
    padding: auto;
    font-family: "Impact", fantasy;
}

body {
    // background: url('pexels-expect-best.jpg') ;
    background: url('IMG_0248.jpg') ;
    background-size: cover;
} 

h1 {
    width: 50%;
    position: center;
    left: 100px;
    top: 150px;
    color: black;
}

.title h1{
    color: black;
}

.container, .container-fluid, .container-sm, .container-md, .container-lg, .container-xl {
    width: 50%;
    padding-right: 10px;
    padding-left: 10px;
    margin-right: auto;
    margin-left: auto;
    display: relative;
}

.child {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 320px;
    padding: 10px;
    border: 5px solid black;
    margin: auto;
    text-align: center;
    background-color: rgba(245, 184, 92, 0.308);;
}

.page-title h1{
    color: rgb(236, 208, 208);
}

ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: hsl(32, 94%, 66%);
  }
  
ul li {
    float: left;
  }
  
ul li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}
  
  /* Change the link color to #111 (black) on hover */
ul li a:hover {
    background-color: #111;
}


ol {
    list-style-type: none;
    margin: 200;
    padding: 0;
    width: 150px;
    text-align: center;
    background-color: #f1f1f1;
    
}
  
ol li a {
    display: block;
    color: #000;
    padding: 8px 16px;
    text-decoration: none;
}
  
  /* Change the link color on hover */
ol li a:hover {
    background-color: #555;
    color: white;
}
footer.branding {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 2.5rem;
    color: white;
}

.form {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 320px;
    padding: 10px;
    border: 5px solid black;
    margin: auto;
    text-align: center;
    background-color: rgba(245, 184, 92, 0.308);;
}

